Settings: add volume tone toggle back [2/2]
This patch allows the users to choose if they want the audible tone when adjusting the volume

PureNexus Edits:
*update for 8.0 and add a preference controller

aosip:
update to 8.1

Change-Id: I84e2085b9be0a87ddfdbd5175ae6b218c943922c

--- a/res/values/dirty_strings.xml
+++ b/res/values/dirty_strings.xml
@@ -103,4 +103,7 @@
 
     <!-- App Ops summary -->
     <string name="app_ops_settings_summary">View or change advanced app permissions</string>
+
+    <!-- Volume settings - Volume adjustment sound -->
+    <string name="volume_adjust_sounds_title">Volume adjustment sounds</string>
 </resources>
