--- a/res/values/dirty_strings.xml
+++ b/res/values/dirty_strings.xml
@@ -111,4 +111,6 @@
     <string name="three_finger_gesture">Three finger gesture</string>
     <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
 
+    <string name="link_volume_option_title">Link ring and notification volume</string>
+
 </resources>
