--- a/res/values/dirty_strings.xml
+++ b/res/values/dirty_strings.xml
@@ -143,4 +143,10 @@
     <!--Double Tap to Sleep Statusbar-->
     <string name="double_tap_sleep_gesture_title">Double tap to sleep on status bar</string>
 
+    <!-- Default USB configuration -->
+    <string name="select_default_usb_configuration_title">Select default USB configuration</string>
+    <string name="select_default_usb_configuration_dialog_title">Select USB Configuration</string>
+    <string name="default_usb_configuration" translatable="false" >default</string>
+    <string name="select_usb_default_confguration_warning">WARNING: Default USB configuration is enabled also when device is locked!\n\nDo you really want to enable this configuration?</string>
+
 </resources>
