--- a/res/values/dirty_strings.xml
+++ b/res/values/dirty_strings.xml
@@ -101,4 +101,6 @@
     <string name="app_ops_answer_phone_calls">answer calls</string>
     <string name="app_ops_boot_completed">auto start</string>
 
+    <!-- App Ops summary -->
+    <string name="app_ops_settings_summary">View or change advanced app permissions</string>
 </resources>
