--- a/res/xml/app_and_notification.xml
+++ b/res/xml/app_and_notification.xml
@@ -53,6 +53,11 @@
         <intent android:action="android.intent.action.MANAGE_PERMISSIONS" />
     </Preference>
 
+    <Preference
+        android:title="@string/app_ops_settings"
+        android:summary="@string/app_ops_settings_summary"
+        android:fragment="com.android.settings.applications.AppOpsSummary"/>
+
     <PreferenceCategory
         android:key="dashboard_tile_placeholder"
         android:order="10" />
