--- a/overlay/common/packages/apps/Settings/res/values/arrays.xml
+++ b/overlay/common/packages/apps/Settings/res/values/arrays.xml
@@ -47,6 +47,7 @@
         <item>@string/lockscreen_clock_selection_sammy_bold</item>
         <item>@string/lockscreen_clock_selection_analog</item>
         <item>@string/lockscreen_clock_selection_analog_deadpool</item>
+        <item>@string/lockscreen_clock_selection_analog_deepnight</item>
         <item>@string/lockscreen_clock_selection_analog_du</item>
     </string-array>
 
@@ -58,5 +59,6 @@
         <item>4</item>
         <item>5</item>
         <item>6</item>
+        <item>7</item>
     </string-array>
 </resources>
