--- a/java/com/android/dialer/app/res/values/du_strings.xml
+++ b/java/com/android/dialer/app/res/values/du_strings.xml
@@ -41,4 +41,11 @@
     <string name="incall_notifications_vibrate">Vibrate in-call notifications</string>
     <string name="incall_notifications_vibrate_summary">Vibrate instead of playing a sound for in-call notifications</string>
 
+    <string name="call_recording_category_key" translatable="false">call_recording_category</string>
+    <string name="call_recording_category_title">Call recording</string>
+    <string name="call_recording_format_key" translatable="false">call_recording_format</string>
+    <string name="call_recording_format">Audio format</string>
+    <string name="wb_amr_format" translatable="false">AMR-WB</string>
+    <string name="aac_format" translatable="false">AAC</string>
+
 </resources>
