Add 3-fingers-swipe to screenshot under display settings
Change-Id: I8071e3e34e2a8cebaca86e50151fd68e7d41b81f
Signed-off-by: Akshay Menon <deadlyindian@users.noreply.github.com>

--- a/res/values/dirty_strings.xml
+++ b/res/values/dirty_strings.xml
@@ -106,4 +106,9 @@
 
     <!-- Volume settings - Volume adjustment sound -->
     <string name="volume_adjust_sounds_title">Volume adjustment sounds</string>
+
+    <!--3-Finger screenshot-->
+    <string name="three_finger_gesture">Three finger gesture</string>
+    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
+
 </resources>
