--- a/res/values/dirty_strings.xml
+++ b/res/values/dirty_strings.xml
@@ -113,4 +113,8 @@
 
     <string name="link_volume_option_title">Link ring and notification volume</string>
 
+    <!-- Face unlock toggle -->
+    <string name="face_auto_unlock_title">Face auto unlock</string>
+    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
+
 </resources>
