--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -190,4 +190,15 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+            android:key="screenstate_options"
+            android:title="@string/screen_state_toggles_title" >
+
+     <Preference
+        android:key="screenstate_category"
+        android:title="@string/screen_state_toggles_title" 
+        android:fragment="com.android.settings.ScreenStateToggles" />
+
+       </PreferenceCategory>
+
 </PreferenceScreen>
