--- a/res/values/dirty_strings.xml
+++ b/res/values/dirty_strings.xml
@@ -140,4 +140,7 @@
     <string name="screen_state_on_delay_title">Screen On actions delay</string>
     <string name="screen_state_on_delay_summary">Number of seconds to wait before performing actions after screen on</string>
 
+    <!--Double Tap to Sleep Statusbar-->
+    <string name="double_tap_sleep_gesture_title">Double tap to sleep on status bar</string>
+
 </resources>
