--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -105,6 +105,11 @@
         android:summary="@string/tap_to_wake_summary" />
 
     <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/double_tap_sleep_gesture_title"
+        android:defaultValue="true" />
+
+    <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
         android:key="wake_when_plugged_or_unplugged"
         android:title="@string/wake_when_plugged_or_unplugged_title"
         android:summary="@string/wake_when_plugged_or_unplugged_summary"
